src/public/css/style.css
:root {
    --bs-body-font-family: 'Montserrat', sans-serif;
}

body {
    background-color: var(--bs-gray-100);
}

.navbar-brand {
    font-family: 'Macondo', 'Montserrat', sans-serif;
    font-size: 2rem;
}

.pagination {
    justify-content: center;
}

.pagination .current {
    display: inline-block;
    padding: 0.5rem 1rem;
    background: var(--bs-gray-200);
}

.pagination ul {
    list-style: none;
    display: flex;
}

footer{
    width: 100%;
    padding: 50px 0px;
}

.container_footer{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    max-width: 1200px;
    margin: auto;
    margin-top: 10px;
}

.box__footer{
    display: flex;
    flex-direction: column;
    padding: 40px;

}

.box__footer h2{
    margin-bottom: 30px;
    color: #343434;
    font-weight: 700;
}

.box__footer p{
    margin-top: 10px;
    color: #7a7a7a;
    font-weight: 600;
}

.box__footer p:hover{
    opacity: 0.8;
}

